@@ -74,6 +74,7 @@ export("%&%",
        "is.null.DN",
        "invPerm",
        "lu",
+       "mat2triplet",
        "nearPD",
        "nnzero",
        "formatSpMatrix", "formatSparseM", .formatSparseSimple,
